# wearable_hid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/ap/: ap.cpp  ap.h  ap_def.h
src/ap/include/: accelerometer_handler.h  filter.h  imu_ap.h  model_v1_quantized.h  model_v2_quantized.h  tap_detect_ap.h  tap_detector.h  tap_process_handler.h
src/ap/src/: accelerometer_handler.c  filter.c  imu_ap.cpp  tap_detect_ap.c  tap_detector.c  tap_process_handler.c
src/bsp/: FreeRTOSConfig.h  bsp.c  bsp.h
src/bsp/freertos/: FreeRTOS_Kernel_import.cmake
src/common/: def.h
src/common/core/: qbuffer.c  qbuffer.h
src/common/hw/include/: adxl345.h  cli.h  gpio.h  hc06.h  i2c.h  imu.h  led.h  spi.h  tca9548a.h  uart.h
src/common/hw/include/imu/: MadgwickAHRS.h  imu.h  mpu6050.h  mpu6050_regs.h
src/hw/: hw.c  hw.cpp  hw.h  hw_def.h
src/hw/driver/: adxl345.c  cli.c  gpio.c  hc06.c  i2c.c  imu.cpp  led.c  spi.c  tca9548a.c  uart.c
src/hw/driver/imu/: MadgwickAHRS.cpp  imu.cpp  mpu6050.cpp
src/lib/pico-tflmicro/: CMakeLists.txt
